# footprint_generator

./: .gitignore  README.md  main.py  pyproject.toml  test.geojson  viz.py
data/example_data/: LC09_L2SP_015034_20260228_20260301_02_T1_ST_DRAD.TIF
exports/: 20220322_181153_29_249d_3B_AnalyticMS_SR_8b.geojson  20220322_181153_29_249d_3B_AnalyticMS_SR_8b.shp  20220322_181153_29_249d_3B_AnalyticMS_SR_8b.shx  2024-08-13_analysis_ready_ps_sr.geojson  2024-08-13_analysis_ready_ps_sr.shp  2024-08-13_analysis_ready_ps_sr.shx  LC09_L2SP_014031_20260410_20260411_02_T1_SR_B3.geojson  LC09_L2SP_014031_20260410_20260411_02_T1_SR_B3.shp  LC09_L2SP_014031_20260410_20260411_02_T1_SR_B3.shx  LC09_L2SP_014031_20260410_20260411_02_T1_ST_TRAD.shp  LC09_L2SP_014031_20260410_20260411_02_T1_ST_TRAD.shx  LC09_L2SP_014036_20260410_20260411_02_T1_SR_B4.dbf  LC09_L2SP_014036_20260410_20260411_02_T1_SR_B4.geojson  LC09_L2SP_014036_20260410_20260411_02_T1_SR_B4.shp  LC09_L2SP_014036_20260410_20260411_02_T1_SR_B4.shx  LC09_L2SP_015034_20260228_20260301_02_T1_ST_DRAD.geojson  LC09_L2SP_015034_20260228_20260301_02_T1_ST_DRAD.shp  LC09_L2SP_015034_20260228_20260301_02_T1_ST_DRAD.shx
geojsons/: 20220322_181153_29_249d_3B_AnalyticMS_SR_8b.geojson  2024-08-13_analysis_ready_ps_sr.geojson  LC09_L2SP_014031_20260410_20260411_02_T1_SR_B3.geojson  LC09_L2SP_014031_20260410_20260411_02_T1_ST_TRAD.geojson  LC09_L2SP_014036_20260410_20260411_02_T1_SR_B4.geojson  LC09_L2SP_015034_20260228_20260301_02_T1_ST_DRAD.geojson  test.geojson
src/: generator.py  main.py  pysidecomp.py  viz.py
