[project]
name = "footprint-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pyside6>=6.11.0",
    "rasterio>=1.5.0",
    "shapely>=2.1.2",
]
